syntax = "proto3";

package auction;
option go_package = "auction/go-architecture/pb";

// Simplified Raft (Q3 Instructions.txt) leader election + heartbeat.

message RaftNodeId { string id = 1; }

message RequestVoteArgs {
  string candidate_id = 1;
  int64 term = 2;
}

message RequestVoteReply {
  int64 term = 1; // receiver's current term
  bool vote_granted = 2;
}

// Log replication additions for Q4
message LogEntry {
  string operation = 1; // opaque operation string
  int64 term = 2;       // term when entry received by leader
  int64 index = 3;      // position in log (0-based)
}

message AppendEntriesArgs {
  string leader_id = 1;
  int64 term = 2;
  repeated LogEntry entries = 3; // full log snapshot (simplified protocol)
  int64 commit_index = 4;        // leader's committed index c
}

message AppendEntriesReply {
  int64 term = 1;
  bool success = 2; // true if follower accepted snapshot
  int64 applied_up_to = 3; // follower's applied (executed) index
}

message ClientRequestArgs { string operation = 1; }
message ClientRequestReply {
  bool accepted = 1;
  string message = 2;
  int64 index = 3;          // index assigned (if accepted)
  int64 committed_index = 4; // leader commit index when responding
}

service RaftNode {
  rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply);
  rpc AppendEntries(AppendEntriesArgs) returns (AppendEntriesReply);
  rpc ClientRequest(ClientRequestArgs) returns (ClientRequestReply); // client-facing op submit (may forward)
}
